styling: complete initial styling of trail popups

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -3,6 +3,12 @@ body {
   padding: 0;
 }
 
+#title {
+  color: #000000;
+  font-size: 18px;
+  font-weight: 600;
+}
+
 * {
   box-sizing: border-box;
 }
